--- a/Docker Images/apache-php-image/BootstrapSite/index.html
+++ b/Docker Images/apache-php-image/BootstrapSite/index.html
@@ -39,7 +39,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">API HTTP_INFRA</h1>
-                        <h2 id="students" class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
+                        <h2 id="quote" class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
                         <a class="btn btn-primary" href="#about">Get Started</a>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 
-        <!-- Custom script to load students-->
-        <script src="js/students.js"></script>
+        <!-- Custom script to load quote-->
+        <script src="js/quote.js"></script>
     </body>
 </html>
